# chess-diagram

./: .gitattributes  Cargo.toml  Makefile  PROJECT_PLAN.md  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
assets/: LICENSE-pieces
examples/: gallery.rs
src/: annotation.rs  board.rs  fen.rs  lib.rs  options.rs  pgn.rs  pieces.rs  png.rs
src/render/: mod.rs  svg.rs
src/render/svg/: arrows.rs  coordinates.rs  grid.rs  mod.rs  shapes.rs  text.rs
tests/: integration.rs
tests/common/: mod.rs
