[package]
name = "chess-diagram"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Render a chess position (FEN) to a self-contained SVG diagram with Cburnett pieces, coordinate labels, highlight/check squares, and study-style arrow/circle/text annotations. Pure Rust, no native deps."
repository = "https://github.com/xmiksay/chess-diagram"
readme = "README.md"
keywords = ["chess", "fen", "svg", "diagram", "arrows"]
categories = ["visualization", "rendering", "game-development"]
exclude = ["assets/gallery/", "tests/golden/", ".github/"]

[features]
default = ["svg"]
svg = []
pgn = ["dep:shakmaty"]
png = ["svg", "dep:resvg"]

[dependencies]
thiserror = "2"
shakmaty = { version = "0.30", optional = true }
resvg = { version = "0.47", optional = true }

[dev-dependencies]
png = "0.18"
